# Get_Field_PCAC

./: .gitignore  CMakeLists.txt  Description.txt  a.out  decltype_test.txt  main_field_ideal.cpp
ED_OperatorLib/: CMakeLists.txt
ED_OperatorLib/include/: K.h  Num_Par.h  R.h  integrals_analytic.h
ED_OperatorLib/include/ED_OperatorLib/: R.h  constants.h  element_geom.h  integral_par.h  integral_universal_seg_pnt.h  integrals_analytic.h  k0.h  kernel_lib.h
ED_OperatorLib/src/: Integral_Par.cpp  K.cpp  Num_Par.cpp  element_geom.cpp  f_par.cpp  integrals_analytic.cpp  kernel_lib.cpp
Example/: ED_Par.cpp  K.cpp  Num_Par.cpp  Num_Par.h  a.out  common_type.cpp  common_type.h  e0.cpp  element_geom.cpp  element_geom.h  get_einc.h  get_j.cpp  get_j.h  integral_universal_pnt.h  integral_universal_seg_pnt.h  k0.h  kernel_lib.h  main_field_ideal.cpp
Example/data/: description  num_param_field.txt
Example/results/: body.gr
Example/results/field/: E_H_im.gv  E_V_im.gv  E_V_real.gv
data/: ed_param.txt
data/j/: j_H_image.gv  j_H_real.gv  j_V_image.gv  j_V_real.gv
include/: Constants.h  ED_Par.h  K.h  Num_Par.h  R.h  cell.h  common_type.h  constants.h  e0.h  element_geom.h  f_par.h  get_area.h  get_einc.h  get_field.h  get_fieldOnePoint.h  get_j.h  integral_par.h  integral_universal_pnt.h  integral_universal_seg_pnt.h  integrals_analytic.h  k0.h  kernel_lib.h  write_to_file.h
include/ED_Field/: E0.h  get_einc.h  get_hinc.h  get_j.h
include/ED_Operators/: K.h  K0.h  R.h
include/grids/: Cell.h  Cell_Triangle.h  common_type.h  common_type_triangle.h
include/integrators/: integral_universal_pnt.h  integral_universal_seg_pnt.h
include/io/: write_to_file.h
include/param/: ED_Par.h  Kernel_Par.h  Num_Par.h
min_set/: ED_Par.cpp  Integral_Par.h  K.cpp  K.h  K0.h  Kernel_Par.h  Num_Par.cpp  Num_Par.h  constants.h  element_geom.cpp  element_geom.h  f_par.cpp  f_par.h  get_einc.cpp  get_einc.h  get_field.h  integral_par.cpp  integral_par.h  integral_universal_pnt.h  k0.h  kernel_lib.cpp
results/: ed_param_res.txt
results/field/: E_H_abs.gdr  E_H_image.gv  E_H_real.gv  E_V_abs.gdr  E_V_image.gv  E_V_real.gv
src/: ED_Par.cpp  K.cpp  Num_Par.cpp  cell.cpp  common_type.cpp  e0.cpp  element_geom.cpp  f_par.cpp  get_einc.cpp  get_j.cpp  integrals_analytic.cpp  kernel_lib.cpp  write_to_file.cpp
src/ED_Field/: E0.cpp  get_einc.cpp  get_hinc.cpp  get_j.cpp
src/grids/: Cell.cpp  Cell_Triangle.cpp  common_type.cpp  common_type_triangle.cpp
src/io/: write_to_file.cpp
src/param/: ED_Par.cpp  Integral_Par.cpp  Kernel_Par.cpp
tests/ED_Operators/: main_K.cpp  main_R.txt
tests/data/: ed_param.txt  num_parFar_field.txt  param_description
tests/data/grids/: grid_OXY_4_4.gr
tests/data/j/: j_V_image.gv
tests/field/: main_field.cpp
tests/integratots/: main_integrals.cpp
tests/results/: body.gr  ed_param_res.txt
tests/results/field/: E_SCH_abs.gdr  E_SCH_image.gv  E_SCH_real.gv  E_abs.gdr  E_image.gv  E_real.gv  H_SCH_abs.gdr  H_SCH_image.gv  H_SCH_real.gv  H_abs.gdr  H_image.gv  H_real.gv
